src/test/error/class6.lns
pub class Test {
}
class Sub extend Test {
}
pub class Hoge { // error
   let val:Sub {pub:Test};
}
let hoge = new Hoge( new Sub() );
let val:&Sub = hoge.$val; // error

{
   let test2 = new int; // error
}
